--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://matrixmatrix1111.github.io/otanjoubi_omedetou/css/style.css">
     <script src="js/script.js" defer></script>
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="favicon.svg" type="svg+xml">
 </head>
 <body>
     <!-- ローディング画面 -->
@@ -41,15 +41,15 @@
         <div class="gallery-content wrapper">
             <h2 class="title">Lookbook</h2>
             <ul class="gallery-thumbnails">
-                <li><img src="images/28751066-E61B-40F7-B372-1B0ECE418BC7.jpg" alt=""></li>
-                <li><img src="images/2E8E8A58-89AC-4B9D-8322-8FA0B5B82625 - コピー.jpg" alt=""></li>
-                <li><img src="images/008FCB6E-318E-416D-BB10-C68FED0D26B1.jpg" alt=""></li>
-                <li><img src="images/767EF8C4-6962-434D-9210-F69632F70986.jpg" alt=""></li>
-                <li><img src="images/40E5FCF0-2532-4DB5-82BC-F48460AC7296.jpg" alt=""></li>
-                <li><img src="images/66886F66-EC14-4418-B2E5-1A02DFEFF980.jpg" alt=""></li>
-                <li><img src="images/CCBA58A4-65A6-4B95-874E-61437E84BEDE.jpg" alt=""></li>
-                <li><img src="images/BEDCB08E-951D-4C46-A475-3A1AEF68CE24.jpg" alt=""></li>
-                <li><img src="images/0B025D35-E612-4ADC-9DC6-BA5B2E248D62.jpg" alt=""></li>
+                <li><img src="28751066-E61B-40F7-B372-1B0ECE418BC7.jpg" alt=""></li>
+                <li><img src="2E8E8A58-89AC-4B9D-8322-8FA0B5B82625 - コピー.jpg" alt=""></li>
+                <li><img src="008FCB6E-318E-416D-BB10-C68FED0D26B1.jpg" alt=""></li>
+                <li><img src="767EF8C4-6962-434D-9210-F69632F70986.jpg" alt=""></li>
+                <li><img src="40E5FCF0-2532-4DB5-82BC-F48460AC7296.jpg" alt=""></li>
+                <li><img src="66886F66-EC14-4418-B2E5-1A02DFEFF980.jpg" alt=""></li>
+                <li><img src="CCBA58A4-65A6-4B95-874E-61437E84BEDE.jpg" alt=""></li>
+                <li><img src="BEDCB08E-951D-4C46-A475-3A1AEF68CE24.jpg" alt=""></li>
+                <li><img src="0B025D35-E612-4ADC-9DC6-BA5B2E248D62.jpg" alt=""></li>
             </ul>
         </div>
     </section>
@@ -59,26 +59,26 @@
         <h3 class="title">Messages to you
         </h3>
         <section id="menu">
-            <video controls class=kids src="images/たっくんインコ.mp4"></video>
+            <video controls class=kids src="たっくんインコ.mp4"></video>
             <p class="text">Happy birthday.
             Love you as always</p>
         </section>
         
         <section id="menu">
             
-            <img class="kids" src="images/お姉ちゃんあご.jpg" alt="">
+            <img class="kids" src="お姉ちゃんあご.jpg" alt="">
             <p class="text">แฮปปี้เบิร์ดเดย์จ้า love you รักแม่ที่สุดในโลก ขอให้เแม่มีความสุข สุขภาพแข็งแรงอยู่กับลูกไปจนอายุ200ปี กอดๆๆจุ้บๆๆ💗🎉</p>
         </section>   
 
         <section id="menu">
 
-            <img class=kids src="images/2F19B526-2831-4157-9862-AB8B7BD3183B.jpg" alt="">
+            <img class=kids src="2F19B526-2831-4157-9862-AB8B7BD3183B.jpg" alt="">
             <p class="text">ままいつもがんばってくれてありがとう<br>เป็นเรื่องที่เล็กน้อยขนาดไหนอิแม่กะเฮ็ดให้ตลอด<br>
              ほんとにありがとう<br>แต่ลูกอยากให้แม่ได้พักผ่อนบ้างอยากให้แม่สนใจในการดูแลตัวเองมากขึ้น มีเรื่องอีหยังลูกจะพยายามรับฟังทุกปัญหาของแม่นะ บางอย่างถ้าลูกเฮ็ดได้เดี๋ยวลูกเฮ็ดเองนะบ่อยากให้แม่หักโหมตัวเองมากเกินไป ขอให้แม่มีความสุขมาก〜นะฮักนะๆๆ</p>            
         </section>
 
         <section id="menu">
-            <img class="kids" src="images/papi.jpg" alt="">
+            <img class="kids" src="papi.jpg" alt="">
             <p class="text">Happy birthday, my love!<br>               We've known each other for almost 24 years. Thank you for your unconditional love and support for our family.<br>  I'm so proud to be your husband.
             </p>
         </section>
