--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="loading-screen"></div>
     </div>
     <!-- ママのメイン写真 -->
-    <section class="hero">
+    <section class="hero"     background="url('bg-shadow.jpg') no-repeat right bottom / cover fixed;">
         <h1 class="title">Happy Birthday<br>Mama</h1>
     </section>
       
