--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
         <div id="loading-screen"></div>
     </div>
     <!-- ママのメイン写真 -->
-    <section class="hero"     background="url('bg-shadow.jpg') no-repeat right bottom / cover fixed;">
+    <section class="hero>   
         <h1 class="title">Happy Birthday<br>Mama</h1>
+        <style>
+            body {
+             color: var(--brown);
+             background: url('../images/bg-shadow.jpg') no-repeat right bottom / cover fixed;
+             text-align: center;
+             margin: 0 auto;
+             width: 1400px
+            }            
+        </style>
     </section>
       
     <section class="concept">
