--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
     </section>
 
     <section class="shop">
+        <style>
+            .shop {
+                background: url('../images/1F6CF9F3-5529-4650-8EDA-44441C60CA60\ -\ コピー.jpg') no-repeat center top / cover;
+                margin-top: 16rem;
+                position: relative;
+                height: 40rem;
+            }
+        </style>
         <div class="shop-content">        
              
             <p class="happy">Stay healthy and Happy forever!!
