--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <style>
             body {
              color: var(--brown);
-             background: url('../images/bg-shadow.jpg') no-repeat right bottom / cover fixed;
+             background: url('bg-shadow.jpg') no-repeat right bottom / cover fixed;
              text-align: center;
              margin: 0 auto;
              width: 1400px
