--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <li><img src="CCBA58A4-65A6-4B95-874E-61437E84BEDE.jpg" alt=""></li>
                 <li><img src="BEDCB08E-951D-4C46-A475-3A1AEF68CE24.jpg" alt=""></li>
                 <li><img src="0B025D35-E612-4ADC-9DC6-BA5B2E248D62.jpg" alt=""></li>
+                <li><img src="S__3514405.jpg" alt=""></li>
+                <li><img src="S__3514407.jpg" alt=""></li>
+                <li><img src="S__3514409.jpg" alt=""></li>
             </ul>
         </div>
     </section>
