--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="28751066-E61B-40F7-B372-1B0ECE418BC7.jpg" alt="">
         </div>
         <div class="gallery-content wrapper">
-            <h2 class="title">Lookbook</h2>
+<!-- <h2 class="title">Lookbook</h2> -->
             <ul class="gallery-thumbnails">
                 <li><img src="28751066-E61B-40F7-B372-1B0ECE418BC7.jpg" alt=""></li>
                 <li><img src="2E8E8A58-89AC-4B9D-8322-8FA0B5B82625 - コピー.jpg" alt=""></li>
