--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <li><img src="S__3514405.jpg" alt=""></li>
                 <li><img src="S__3514407.jpg" alt=""></li>
                 <li><img src="S__3514409.jpg" alt=""></li>
+                <li><img src="family trip.jpg" alt=""></li>
+                <li><img src="family windmill.jpg" alt=""></li>
+                <li><img src="video_16281192809372-pYqpFgPZ.mp4" alt=""></li>
             </ul>
         </div>
     </section>
